# scan-bench

./: .gitignore  Cargo.toml  callgrind.out.19008  readme.md
benches/: benchmark.rs
components/profiler/: Cargo.toml  prime.profile
components/profiler/src/: lib.rs  profiler_dummy.rs  profiler_unix.rs
criterion/forward_batch_scan(rocks db data size 10000, value length 128)/base/: sample.json  tukey.json
criterion/forward_batch_scan(rocks db data size 10000, value length 128)/new/: benchmark.json  estimates.json  raw.csv
criterion/forward_batch_scan(rocks db data size 10000, value length 128)/report/: index.html
criterion/forward_batch_scan(rocks db data size 10000, value length 256)/base/: sample.json
criterion/forward_batch_scan(rocks db data size 10000, value length 256)/new/: benchmark.json  estimates.json  raw.csv  tukey.json
criterion/forward_batch_scan(rocks db data size 10000, value length 256)/report/: index.html
criterion/forward_batch_scan(rocks db data size 10000, value length 64)/base/: benchmark.json  raw.csv
criterion/forward_batch_scan(rocks db data size 10000, value length 64)/new/: estimates.json  sample.json  tukey.json
criterion/forward_batch_scan(rocks db data size 10000, value length 64)/report/: index.html
criterion/forward_batch_scan(rocks db data size 50000, value length 128)/base/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/report/: index.html
src/: big_code.rs  db_opts.rs  drain.rs  gen_db.rs  lib.rs  schema.rs
src/tikv_code/: bytes.rs  cfg.rs  constexpr.rs  key.rs  mod.rs  number.rs
(+50 files in other folders)
