[package]
name = "nacs"
version = "0.1.0"
authors = ["mapleFU <1506118561@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempdir = "0.3.7"
regex = "1.2"
bytes = "0.4.12"
byteorder = "1.3.2"
num-traits = "0.2.8"
url = "2.0.0"
quick-error = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.5.7"

[dev-dependencies]
criterion = "0.2.11"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"

[[bench]]
name = "benchmark"
harness = false